NIFI-12720 BUG - Dark mode skeleton loader styles (#8465)
* NIFI-12720

Set an explicit background color for the skeleton-loader element so there is sufficient contrast to show the animation in both light and dark themes.

* NIFI-12720

Updates based on comments

* Update nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/styles.scss


---------

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/styles.scss
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/styles.scss
@@ -331,6 +331,10 @@ $appFontPath: '~roboto-fontface/fonts';
     .refresh-timestamp {
         color: $warn-palette-A400;
     }
+
+    ngx-skeleton-loader .skeleton-loader {
+        background: $canvas-primary-palette-400;
+    }
 }
 
 @mixin nifi-styles() {
